--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.14",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Development Status :: 4 - Beta",
@@ -24,7 +25,7 @@ classifiers = [
 ]
 dependencies = [
     "structlog>=23.0.0",
-    "sentry-sdk[fastapi]>=2.35.0",
+    "sentry-sdk[fastapi]>=2.46.0",
 ]
 
 [project.urls]
